--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav {
+  position: absolute;
+  top:0;
+  display: flex;
+  flex-direction: row;
+}
+
+li {
+  list-style-type: none;
+   margin-left: 20px;
+}
+a {
+  text-decoration: none;
+  color: #d0021b;
+}
+a:active {
+  color: black;
+}
+
+.contentStyle {
+  position: relative;
+  z-index: 1;
+  padding: 50px 20px;
+  color: #fff;
+}
+.parallaxStyle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("https://static.wixstatic.com/media/84770f_6ae4822c69ed4fb48148b9e04fc0702b~mv2.jpg/v1/fill/w_980,h_721,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/84770f_6ae4822c69ed4fb48148b9e04fc0702b~mv2.jpg");
+  /*background-attachment: fixed;*/
+  /*background-positionY: offsetY * 0.5;*/
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: -1;
+}
